--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -15,8 +15,9 @@ jobs:
         image: mysql:5.7
         env:
           MYSQL_ROOT_PASSWORD: root
-          MYSQL_ROOT_DATABASE: test_database
+          MYSQL_DATABASE: test_database
           MYSQL_USER: root
+          MYSQL_PASSWORD: root
         ports:
           - 3306:3306
         options: --health-cmd "mysqladmin ping --silent" --health-interval 10s
