--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           node-version: '16'
       - name: Install dependencies
-        working-directory: laravel/react
+        working-directory: react
         run: npm install
       - name: Run React tests
         working-directory: laravel/react
